# pm-mission-control

./: README.md
.github/workflows/: build-desktop-binaries.yml
frontend/: package.json
frontend/src/: styles.css
frontend/src/ui/: App.tsx
scripts/: build-binaries.sh
src-tauri/: Cargo.toml
src-tauri/src/: journal.rs  lib.rs  parser.rs  settings.rs  tags.rs  tasks.rs  workspace.rs
src-tauri/src/atlassian/: confluence.rs  jira.rs  mod.rs
